turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:2: error: not found: value x
  x = getX()
  ^DiskFourth:3: error: not found: value y
  y = getY()
  ^DiskFourth:6: error: not found: value x
    setPos(x, y)
           ^DiskFourth:6: error: not found: value y
    setPos(x, y)
              ^